--- a/app/src/main/res/layout/activity_account_settings.xml
+++ b/app/src/main/res/layout/activity_account_settings.xml
@@ -1,59 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical"
+    android:paddingTop="@dimen/_30sdp"
     tools:context=".views.settings.AccountSettingsActivity">
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Account"
-        android:fontFamily="@font/sf_pro_rounded_medium"
-        android:textColor="@color/black"
-        android:textSize="@dimen/_40ssp"
-        android:textStyle="bold"
-        android:paddingTop="@dimen/_30sdp"
+        android:fontFamily="@font/ptsans_bold"
         android:paddingStart="@dimen/_20sdp"
-        android:paddingEnd="@dimen/_20sdp"/>
+        android:paddingEnd="@dimen/_20sdp"
+        android:layout_marginBottom="@dimen/_10sdp"
+        android:text="Account"
+        android:textColor="@color/black"
+        android:textSize="@dimen/_25ssp"
+        android:textStyle="bold" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_1sdp"
+        android:background="#1A000000" />
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbars="vertical">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:paddingStart="@dimen/_20sdp"
             android:paddingEnd="@dimen/_20sdp">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_15sdp"
+                android:fontFamily="@font/ptsans_regular"
                 android:text="Notifications"
                 android:textAllCaps="true"
-                android:fontFamily="@font/sf_pro_rounded_regular"
                 android:textColor="@color/indicatioractive"
-                android:textSize="@dimen/_12ssp"
-                android:textStyle="bold"
-                android:layout_marginTop="@dimen/_15sdp"/>
+                android:textSize="@dimen/_14ssp"
+                android:textStyle="bold" />
             <!-- Notification settings -->
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_15sdp"
+                android:background="?attr/selectableItemBackground"
                 android:clickable="true"
-                android:focusable="true"
-                android:background="?attr/selectableItemBackground">
+                android:focusable="true">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentStart="true"
                     android:layout_centerVertical="true"
-                    android:fontFamily="@font/sf_pro_rounded_regular"
+                    android:fontFamily="@font/ptsans_regular"
                     android:text="Push Notifications"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_16ssp" />
@@ -64,28 +73,30 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
                     android:layout_centerVertical="true"
-                    android:checked="true"/>
+                    android:checked="true" />
             </RelativeLayout>
+
             <View
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_1sdp"
-                android:background="@color/divider"
                 android:layout_marginTop="@dimen/_5sdp"
-                android:layout_marginBottom="@dimen/_5sdp"/>
+                android:layout_marginBottom="@dimen/_5sdp"
+                android:background="@color/divider" />
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_15sdp"
+                android:background="?attr/selectableItemBackground"
                 android:clickable="true"
-                android:focusable="true"
-                android:background="?attr/selectableItemBackground">
+                android:focusable="true">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentStart="true"
                     android:layout_centerVertical="true"
-                    android:fontFamily="@font/sf_pro_rounded_regular"
+                    android:fontFamily="@font/ptsans_regular"
                     android:text="Email Notifications"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_16ssp" />
@@ -96,40 +107,42 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
                     android:layout_centerVertical="true"
-                    android:checked="true"/>
+                    android:checked="true" />
             </RelativeLayout>
+
             <View
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_1sdp"
-                android:background="@color/divider"
                 android:layout_marginTop="@dimen/_5sdp"
-                android:layout_marginBottom="@dimen/_5sdp"/>
+                android:layout_marginBottom="@dimen/_5sdp"
+                android:background="@color/divider" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_25sdp"
+                android:fontFamily="@font/ptsans_regular"
                 android:text="Other Settings"
                 android:textAllCaps="true"
-                android:fontFamily="@font/sf_pro_rounded_regular"
                 android:textColor="@color/indicatioractive"
-                android:textSize="@dimen/_12ssp"
-                android:textStyle="bold"
-                android:layout_marginTop="@dimen/_25sdp"/>
+                android:textSize="@dimen/_14ssp"
+                android:textStyle="bold" />
             <!-- Sign Out  -->
             <RelativeLayout
                 android:id="@+id/button_deactivate_settings"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:clickable="true"
-                android:focusable="true"
                 android:layout_marginTop="@dimen/_15sdp"
-                android:background="?attr/selectableItemBackground">
+                android:background="?attr/selectableItemBackground"
+                android:clickable="true"
+                android:focusable="true">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
                     android:layout_alignParentStart="true"
-                    android:fontFamily="@font/sf_pro_rounded_regular"
+                    android:layout_centerVertical="true"
+                    android:fontFamily="@font/ptsans_regular"
                     android:text="Deactivate Account"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_16ssp" />
