--- a/app/src/main/res/layout/activity_safe_dating_tips.xml
+++ b/app/src/main/res/layout/activity_safe_dating_tips.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,77 +7,91 @@
     android:background="@color/white"
     android:orientation="vertical"
     tools:context=".views.settings.SafeDatingTipsActivity">
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Safe Dating Tips"
-        android:fontFamily="@font/sf_pro_rounded_medium"
-        android:textColor="@color/black"
-        android:textSize="@dimen/_40ssp"
-        android:textStyle="bold"
-        android:paddingTop="@dimen/_30sdp"
+        android:fontFamily="@font/ptsans_bold"
         android:paddingStart="@dimen/_20sdp"
-        android:paddingEnd="@dimen/_20sdp"/>
+        android:paddingTop="@dimen/_30sdp"
+        android:paddingEnd="@dimen/_20sdp"
+        android:text="Safe Dating Tips"
+        android:textColor="@color/black"
+        android:textSize="@dimen/_25ssp"
+        android:layout_marginBottom="@dimen/_10sdp"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_1sdp"
+        android:background="#1A000000" />
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbars="vertical">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:paddingStart="@dimen/_20sdp"
             android:paddingEnd="@dimen/_20sdp">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/safe_dating_tips_para_1"
+                android:fontFamily="@font/ptsans_regular"
                 android:justificationMode="inter_word"
-                android:fontFamily="@font/sf_pro_rounded_regular"
+                android:text="@string/safe_dating_tips_para_1"
                 android:textColor="@color/black"
-                android:textSize="@dimen/_16ssp"
+                android:textSize="@dimen/_14ssp"
                 android:layout_marginTop="@dimen/_10sdp"/>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
             </LinearLayout>
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:fontFamily="@font/ptsans_regular"
+                android:justificationMode="inter_word"
                 android:text="@string/safe_dating_tip_1"
-                android:justificationMode="inter_word"
-                android:fontFamily="@font/sf_pro_rounded_regular"
                 android:textColor="@color/black"
-                android:textSize="@dimen/_16ssp"
-                android:layout_marginTop="@dimen/_10sdp"/>
+                android:textSize="@dimen/_14ssp" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:fontFamily="@font/ptsans_regular"
+                android:justificationMode="inter_word"
                 android:text="@string/safe_dating_tip_2"
-                android:justificationMode="inter_word"
-                android:fontFamily="@font/sf_pro_rounded_regular"
                 android:textColor="@color/black"
-                android:textSize="@dimen/_16ssp"
-                android:layout_marginTop="@dimen/_10sdp"/>
+                android:textSize="@dimen/_14ssp" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:fontFamily="@font/ptsans_regular"
+                android:justificationMode="inter_word"
                 android:text="@string/safe_dating_tip_3"
-                android:justificationMode="inter_word"
-                android:fontFamily="@font/sf_pro_rounded_regular"
                 android:textColor="@color/black"
-                android:textSize="@dimen/_16ssp"
-                android:layout_marginTop="@dimen/_10sdp"/>
+                android:textSize="@dimen/_14ssp" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/safe_dating_tip_4"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:fontFamily="@font/ptsans_regular"
                 android:justificationMode="inter_word"
-                android:fontFamily="@font/sf_pro_rounded_regular"
+                android:text="@string/safe_dating_tip_4"
                 android:textColor="@color/black"
-                android:textSize="@dimen/_16ssp"
-                android:layout_marginTop="@dimen/_10sdp"/>
+                android:textSize="@dimen/_14ssp" />
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
