--- a/app/src/main/res/layout/liked_profile_placeholder.xml
+++ b/app/src/main/res/layout/liked_profile_placeholder.xml
@@ -17,7 +17,7 @@
             android:layout_weight="1"
             android:orientation="vertical">
 
-            <com.google.android.material.imageview.ShapeableImageView
+            <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_150sdp"
                 android:background="@color/placeholder_background"
@@ -43,7 +43,7 @@
             android:layout_weight="1"
             android:orientation="vertical">
 
-            <com.google.android.material.imageview.ShapeableImageView
+            <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_150sdp"
                 android:background="@color/placeholder_background"
